# zet_cli

./: .goreleaser.yaml  Cargo.toml  README.md  deploy
src/: cli.rs  error_management.rs  git_utils.rs  main.rs  repo_schema.rs
src/cmds/: create.rs  edit.rs  grep.rs  import.rs  init.rs  mod.rs  now.rs  sync.rs  titles.rs  view.rs
