[package]
name = "zettelkasten-cli"
version = "0.1.0"
edition = "2021"
description = "A zettelkasten CLI that just works and gets out of your way"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
colored = "3.0.0"
git2 = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
which = "7.0.2"

[[bin]]
name = "zet"
path = "src/main.rs"
